# mine

./: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  release-please-config.json
.github/actions/publish/: action.yml
.github/workflows/: ci.yaml  release.yaml
src/: command.rs  env.rs  main.rs  model.rs
